--- a/WebClient/src/components/myaccount/mysubscriptions/mysubscriptions.template.html
+++ b/WebClient/src/components/myaccount/mysubscriptions/mysubscriptions.template.html
@@ -2,38 +2,50 @@
     <div>
         <h4>My Subscriptions</h4>
     </div>
-    <div class="cellRow" v-for="product in subscriptions" style="border: 1px solid #65ff00">
-        <div class="cell">
-            <img :src="product.ServiceImage" height="100" width="200" @click="showMoreInfo(service)">
+    <div class="" v-for="product in subscriptions" style="border: 1px solid #65ff00">
+        <div class="row">
+            <div class="col-md-6">
+                <img :src="product.ServiceImage" height="100" width="200" @click="showMoreInfo(service)">
+            </div>
+            <div class="col-md-6">
 
-        </div>
-        <div class="cell">
-            <div class="form-group">
-                <span style="float: right;" @click="deleteConfirm(product)">
-                    <i class="far fa-trash-alt"></i>
-                </span>
-            </div>
-            <div class="form-group">
-                {{product.ServiceName}}
-            </div>
-            <div class="form-group">
-                ₹ {{product.VehicleTypeId == 2 ? (product.ServiceType == 2 ? product.FourWheelerOncePrice : product.FourWheelerSubPrice) : (product.ServiceType == 2 ? product.Price : product.SubscriptionPrice )}}
-            </div>
-            <div class="form-group">
-                <span> {{product.VehicleName}}</span>
-                <span style="color: #004dff; margin-left: 30px;">
-                    {{product.SubscribeType}}
-                </span>
-            </div>
-            <div class="form-group" v-if="product.ServiceStatusId == 1" @click="addDetailsToPause(product)"
-                style="cursor: pointer;">
-                <span class="pauseSubscribe"><i class="far fa-pause-circle"></i> </span>
-                <span>Pause</span>
-            </div>
-            <div class="form-group" v-if="product.ServiceStatusId == 2" @click="addDetailsToPauseResume(product)"
-                style="cursor: pointer;">
-                <span class="pauseSubscribe"><i class="far fa-play-circle"></i></span>
-                <span>Resume</span>
+                <div class="form-group">
+                    <span style="float: right;" @click="deleteConfirm(product)">
+                        <i class="far fa-trash-alt"></i>
+                    </span>
+                </div>
+                <div class="form-group">
+                    {{product.ServiceName}}
+                </div>
+                <div class="form-group">
+                    ₹
+                    {{product.VehicleTypeId == 2 ? (product.ServiceType == 2 ? product.FourWheelerOncePrice : product.FourWheelerSubPrice) : (product.ServiceType == 2 ? product.Price : product.SubscriptionPrice )}}
+                </div>
+                <div class="form-group">
+                    <span> {{product.VehicleName}}</span>
+                    <span style="color: #004dff; margin-left: 30px;">
+                        {{product.SubscribeType}}
+                    </span>
+                </div>
+                <div class="form-group" v-if="product.ServiceStatusId == 1 || product.ServiceStatusId == 4" @click="addDetailsToPause(product)"
+                    style="cursor: pointer;">
+                    <span class="pauseSubscribe"><i class="far fa-pause-circle"></i> </span>
+                    <span>Pause</span>
+                </div>
+                <div class="form-group" v-if="product.ServiceStatusId == 2" @click="addDetailsToPauseResume(product)"
+                    style="cursor: pointer;">
+                    <div>
+                        The subscription is modified from {{getFormattedDate(product.ServicePauseDate)}} to
+                        {{getFormattedDate(product.ServiceEndDate)}}. Clicking on Resume will delete this modification.
+                        <br>
+                        You can pause/update only after resuming the service.
+                    </div>
+                    <div style="float: right">
+                        <span class="pauseSubscribe"><i class="far fa-play-circle"></i></span>
+                        <span>Resume</span>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
@@ -57,14 +69,14 @@
                                 <label>From</label>
 
                                 <datePickerComponent :keyString="'StartDate'" v-model="serviceObj.StartDate"
-                                    :maximumDate="serviceObj.EndDate" :value="serviceObj.StartDate"
+                                    :value="serviceObj.StartDate"
                                     :format="'Do MMM YYYY'" :onUpdate="updateFilterStartDate" :pickerType="'date'">
                                 </datePickerComponent>
                             </div>
                             <div class="form-group">
                                 <label>Till</label>
                                 <datePickerComponent :keyString="'EndDate'" v-model="serviceObj.EndDate"
-                                    :value="serviceObj.EndDate" :format="'Do MMM YYYY'" :onUpdate="updateFilterEndDate"
+                                    :value="serviceObj.EndDate" :minimumDate="serviceObj.ServicePauseDate" :format="'Do MMM YYYY'" :onUpdate="updateFilterEndDate"
                                     :pickerType="'date'"></datePickerComponent>
                             </div>
                         </div>
@@ -102,7 +114,8 @@
                         </div>
                     </div>
                     <div class="form-group" v-if="selectedReasons.indexOf(5) > -1">
-                        <input type="text" v-model="serviceObj.OtherReason" class="form-control" placeholder="Please specify reason">
+                        <input type="text" v-model="serviceObj.OtherReason" class="form-control"
+                            placeholder="Please specify reason">
                     </div>
 
                 </div>
